# swellow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/actions/install-pg-client/: action.yaml
.github/workflows/: build-test-draft.yaml  build-test-draft.yml  build_release_publish.yaml  build_test_draft.yaml  publish.yaml  release.yaml  release.yml  test-and-stage.yml
binary/: Cargo.toml
binary/src/cli/: commands.rs  mod.rs
binary/src/db/: mod.rs
docs/: data_flock.drawio  diagram.drawio
examples/: README.md
examples/databricks-delta/: main.py  main.sh
examples/databricks-delta/migrations/000001_init/: up.sql
examples/databricks-delta/migrations/000002_orders/: up.sql
examples/databricks-delta/migrations/000003_order_status/: down.sql  up.sql
examples/databricks-delta/migrations/000004_measurements/: down.sql  up.sql
examples/postgres/: README.md  main.py  main.sh
examples/postgres/migrations/000001_init/: up.sql
examples/postgres/migrations/000002_orders/: up.sql
examples/postgres/migrations/000003_order_status/: down.sql  up.sql
examples/postgres/migrations/000004_user_index/: down.sql  up.sql
examples/postgres/migrations/000005_status_enum_refactor/: down.sql  up.sql
examples/postgres/migrations/6_snapshot/: up.sql
examples/postgres/migrations/7_snapshot/: up.sql
examples/r2_data_catalog-iceberg/: main.py
scripts/: check_version.sh  install_pg_client.sh
spark-connect/: Cargo.toml  README.md  build.rs
spark-connect-sql/: Cargo.toml  README.md
spark-connect-sql/src/: builder.rs  client.rs  error.rs  handlers.rs  io.rs  lib.rs  literal.rs  middleware.rs  query.rs  session.rs  test_utils.rs
spark-connect-sql/src/client/: builder.rs  middleware.rs  mod.rs
spark-connect-sql/src/sql/: builder.rs  literal.rs  mod.rs
spark-connect/src/: error.rs  lib.rs  literal.rs  session.rs
spark-connect/src/client/: builder.rs  handlers.rs  mod.rs
src/: commands.rs  db.rs  lib.rs  main.rs  migration_directory.rs  migrations.rs  postgres.rs  ux.rs
src/cli/: commands.rs  mod.rs  todo.txt
src/db/: backend.rs  mod.rs  odbc.rs  postgres.rs
src/migrations/: db.rs  mod.rs
src/swellow/: app.py  cli.py
swellow/: .gitignore  app.py  cli.py
swellow-py/: cli.py
swellow-rs/: Cargo.toml
swellow-rs/src/: main.rs
swellow-rs/src/cli/: commands.rs  error.rs  mod.rs  output.rs  todo.txt  ux.rs
swellow-rs/src/db/: arrow_utils.rs  catalog.rs  error.rs  mod.rs  odbc.rs  postgres.rs  spark.rs  sql_common.rs
swellow-rs/src/migration/: collection.rs  direction.rs  mod.rs
swellow-rs/src/migrations/: directory.rs  mod.rs
swellow-rs/src/parser/: dialect.rs  error.rs  io.rs  migration.rs  mod.rs  resource.rs  statement.rs
swellow-rs/src/sqlparser/: mod.rs  resource.rs  statement.rs
tests/: README.md  conftest.py  test_module.py
tests/common/migration_version_conflict/000001_create_duplicate/: up.sql
tests/fixtures/: backend.py  driver.py
tests/fixtures/databricks/000001_reset/: down.sql
tests/migrations/postgres/snapshot/000002_table/: up.sql
tests/migrations/spark-delta/migrate_and_rollback/000001_create/: up.sql
tests/migrations/spark-delta/migrate_and_rollback/000002_alter/: down.sql
tests/migrations/spark-delta/migrate_and_rollback/000003_drop/: down.sql
tests/migrations/spark-iceberg/snapshot/000003_view/: up.sql
tests/postgres/migrate_and_rollback/000001_create/: down.sql
tests/postgres/migrate_and_rollback/000002_alter/: down.sql  up.sql
tests/postgres/migrate_and_rollback/000003_drop/: down.sql  up.sql
tests/postgres/snapshot/1_schema/: up.sql
tests/spark-delta/: Dockerfile  entrypoint.sh
tests/spark-delta/migrate_and_rollback/1_create/: up.sql
tests/spark-delta/migrate_and_rollback/3_drop/: down.sql
tests/spark-delta/missing_down/1_first/: up.sql
tests/spark-delta/snapshot/000001_database/: up.sql
tests/spark-delta/snapshot/2_table/: up.sql
tests/spark-iceberg/migrate_and_rollback/000003_drop/: down.sql
tests/spark-iceberg/migrate_and_rollback/1_create/: down.sql  up.sql
tests/spark-iceberg/migrate_and_rollback/2_alter/: down.sql
tests/spark-iceberg/migrate_and_rollback/3_drop/: down.sql
tests/spark-iceberg/snapshot/2_table/: up.sql
