[workspace]
members = [
    "swellow-rs",
]

[workspace.package]
authors = ["Francisco A. B. Sampaio <franciscoabsampaio@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/franciscoabsampaio/swellow"

[workspace.dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
arrow-ipc = "56.2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"

[profile.release]
codegen-units = 1 # Improves optimizations
lto = true
opt-level = "z"   # "z" for size, "3" for maximum performance
panic = "abort"   # Abort on panic instead of unwinding — smaller binaries and slightly faster
