[workspace]
members = [
    "swellow-rs",
]
resolver = "3"

[workspace.package]
authors = ["Francisco A. B. Sampaio <franciscoabsampaio@gmail.com>"]
categories = ["command-line-utilities", "database"]
description = "SQL-first migration CLI"
documentation = "https://docs.rs/swellow"
edition = "2024"
homepage = "https://github.com/franciscoabsampaio/swellow"
keywords = ["migration", "sql", "postgres", "delta", "iceberg", "databricks"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/franciscoabsampaio/swellow"
version = "0.2.0"

[workspace.dependencies]
arrow = { version = "56.2.0", default-features = false }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"

[profile.release]
codegen-units = 1 # Improves optimizations
lto = true
opt-level = "z"   # "z" for size, "3" for maximum performance
panic = "abort"   # Abort on panic instead of unwinding — smaller binaries and slightly faster
