[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swellow"
version = "0.2.0"
description = "SQL-first table migrations."
authors = [{ name = "Francisco A. B. Sampaio", email = "franciscoabsampaio@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
swellow = "swellow.cli:main"

[project.optional-dependencies]
test = [
    "docker>=7.1.0",
    "pytest>=8.4.2",
]

# Hatch (build tool)
[tool.hatch.build.targets.wheel]
packages = ["swellow"]
include-files = ["swellow/bin/*"]
