[package]
keywords = ["spark", "connect", "sql", "spark_connect", "spark_connect_sql"]
name = "spark-connect-sql"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow = "56.2.0"
arrow-ipc = "56.2.0"
futures-util = "0.3.31"
http-body = "1.0.1"
prost = "0.14.1"
prost-types = "0.14.1"
regex = "1.11.3"
tokio = { workspace = true }
tonic = { version = "0.14.2" }
tonic-prost = "0.14.2"
tower = "0.5.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
testcontainers = { version = "0.25.0", features = ["blocking"] }

[features]
tls = []
