[package]
name = "swellow"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "swellow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive", "env"] }
odbc-api = "19.0.2"
phf = { version = "0.13.1", features = ["macros"] }
# pyo3 = { version = "0.26", features = ["extension-module", "experimental-async"] }
# pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime"] }
sha2 = "0.10"
spark-connect-sql = { path = "../spark-connect-sql" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
sqlparser = "0.58"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
