[package]
name = "swellow"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "swellow"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4.42", features = ["serde"] }
odbc-api = "19.0.2"
phf = { version = "0.13.1", features = ["macros"] }
spark-connect = { version = "0.2.1", features = ["chrono", "tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
sqlparser = "0.58"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = "1.0.228"
serde_json = "1.0.145"
